src/test/deca/context/valid/created/printVal.deca
{
    int x = 2;
    printx(x);
} 