src/test/deca/context/invalid/created/wrongInstanceOf.deca
{
    boolean x = a instanceof A;
}